<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e6e6e6"
    tools:context=".chat.Chat">

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/chatRecycler"
        android:layout_above="@+id/bottom"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff"
        android:id="@+id/bottom"
        android:layout_alignParentBottom="true"
        android:padding="5dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/messageBox"
            android:background="@android:color/transparent"
            android:hint="@string/chat_type_a_message"
            android:layout_toStartOf="@+id/sendMessage"
            android:layout_centerVertical="true"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sendMessage"
            android:text="@string/chat_send"
            android:background="@color/orangePrimary"
            android:textColor="#fff"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>

</RelativeLayout>