...
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toEndOf="@+id/searchEmail2"
            app:layout_constraintTop_toBottomOf="@+id/searchName2" />

        <LinearLayout
            android:id="@+id/actionsButtons2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchRole2">
...
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:hint="@string/view"
                android:textColor="#fff" />

            <Button
                android:id="@+id/addedChat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:backgroundTint="@color/orangePrimary"
...
